# dvc-toggler-linux

./: LICENSE  README.md  TODO  config.cpp  config.hpp  dvc_toggler_linux.pro  dvc_toggler_linux.qrc  meson.build  procwatch.hpp  profile_selector.cpp  profile_selector.hpp  runguard.hpp  window.cpp  window.hpp
images/: disabled.dia  enabled.dia
nvidia/: Makefile  nvidia.cpp  nvidia.hpp
releases/: dvc-toggler-linux-0.0.5-amd64.deb  dvc-toggler-linux-0.0.5-amd64.rpm  dvc-toggler-linux-0.0.6-amd64.deb  dvc-toggler-linux-0.0.6-amd64.rpm  dvc-toggler-linux-0.0.7-amd64.deb  dvc-toggler-linux-0.0.7-amd64.rpm
scripts/: deb-to-rpm.sh  make-deb-package.sh  make-release.sh
share/applications/: dvc-toggler-linux.desktop
src/: config.cpp  config.hpp  desktop_entry.hpp  dvc_toggler_linux.pro  dvc_toggler_linux.qrc  main.cpp  main_window.cpp  main_window.hpp  meson.build  moc_profileselectorwidget.cpp  pch.hpp  proc_watch.cpp  proc_watch.hpp  procwatch.hpp  profile_selector.cpp  profile_selector.hpp  run_guard.cpp  run_guard.hpp  runguard.hpp  window.cpp  window.hpp  x_client_picker.cpp  xclientpicker.hpp  xdisplay.cpp  xdisplay.hpp
src/dbus/: dbus_example.cpp  dbus_watch.cpp  dbus_watch.hpp  meson.build  test.cpp
src/nvidia/: Makefile  display.cpp  display.hpp  meson.build  nvidia.cpp  nvidia.hpp  test.cpp
src/nvidia/libXNVCtrl/: NVCtrl.c  NVCtrl.h  NVCtrlLib.h  nv-control-screen.h
src/run_guard/: meson.build  run_guard.cpp  run_guard.hpp  test.cpp
src/xdisplay/: meson.build  test.cpp  xdisplay.cpp  xdisplay.hpp
